# dcatoolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_excel_out.csv
1pzs/: 1pzs_seed.fasta
3d7i/: 3d7i.DI  3d7i_MSA.afa_filtered10000  3d7i_MSA.afa_filtered10000_filtered21  3d7i_hmm  3d7i_hmm.h3f
3ddv/: 3ddv_seed.fasta
3f52/: 3f52.DI
6avj/: 6avj_mat.DI  CISD3_filtered_20  CISD3_seed.fasta  CISD3_uniprot_orig_MSA.afa_filtered10000
dcatoolkit/: representation.py
docs/: dcatoolkit.html  index.html  search.js
docs/dcatoolkit/: analytics.html  representation.html
examples/: 2kll_example.py  Cry1Ab_contacts.py  Cry1Ab_sequence.py  DI_generation.py  auth_id_examples.py  contactmap_generation.py  contacts_generation.py  context.py  filter_CISD3_afa.py  find_sequence.py  interface_contacts_generation.py  ranked_mapped_generation.py  sequence_numbering.py
examples/files/: 2kll_aa_8  2kll_align  2kll_align_ranked_matched.DI  2kll_align_reference.txt  2kll_ca_10  Beta_Trefoil_MSA_1.DI  Beta_Trefoil_MSA_1.info  Beta_Trefoil_MSA_1_ranked.DI  EC12_AF_align  Endotoxin_C_AF_align  Endotoxin_M_AF_align  contactmap_calpha_2kll_AA_10.0  fold_cry1ab_ec12_model_0.cif  fold_cry1ab_ec12_model_1.cif  fold_cry1ab_ec12_model_2.cif  fold_cry1ab_ec12_model_3.cif  fold_cry1ab_ec12_model_4.cif  sbds_concat_all_domains_filtered30.fasta
examples/files/1pzs/: 1pzs_MSA.afa_filtered10000_filtered48  1pzs_mat.DI  1pzs_seed copy.fasta
examples/outputs/: 2kll_aa.txt  CISD3_cleaned_MSA.fasta  CISD3_filtered_35_MSA.fasta  beta_trefoil_trial_rm.DI  beta_trefoil_trial_rm_DI.DI  btr1_complex_contacts  orig_2kll_ca_10
src/dcatoolkit/: __init__.py  analytics.py  biostructure_test  representation.py
tests/: context.py  test_alignments.py  test_contacts.py  unique_contacts.py
tests/pdb_info/: 1ahq.cif  1hqz.cif  1rfu.cif  2kll.cif  6avj.cif  6dj4.cif  generate_true_contacts.py  interface_contacts_allatom_args.py  interface_contacts_calpha_args.py  monomer_allatom_1AHQ_8.0  monomer_allatom_1HQZ_8.0  monomer_allatom_1RFU_8.0  monomer_allatom_2KLL_8.0  monomer_allatom_5XTD_8.0  monomer_allatom_6AVJ_8.0  monomer_allatom_6DJ4_8.0  monomer_calpha_1AHQ_10.0  monomer_calpha_1HQZ_10.0  monomer_calpha_1RFU_10.0  monomer_calpha_2KLL_10.0  monomer_calpha_5XTD_10.0  monomer_calpha_6AVJ_10.0  monomer_calpha_6DJ4_10.0  pdb_ids.txt
(+16 files in other folders)
