[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dcatoolkit"
version = "0.1.9"
description = "Collection of useful modules and representations for managing DCA output data."
keywords = ["dca", "toolkit", "DI", "coevolution"]

readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.10"

authors = [
  {name = "Raheel Syed Ahmed", email = "raheelsyedahmed@gmail.com"}
]
maintainers = [
  {name = "Raheel Syed Ahmed", email = "raheelsyedahmed@gmail.com"}
]

dependencies = [
  "biotite",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "scikit-learn>=1.3",
  "scipy>=1.11.0",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
tests = [
  "pytest",
]
docs = [
  "sphinx",
  "pdoc",
  "numpydoc"
]
lint = [
  "ruffle",
]